modification de la taille des images en CSS et ajout du code logique en Ts

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <h2>Nouvelle <span class="regular">Collection</span></h2>
         <div class="carousel-container">
             <div class="nav-left">
-                <i class="fas fa-left"></i>
+                <i class="fas fa-chevron-left"></i>
             </div>
             <div class="carousel" id="carousel">
                 <div class="card">
@@ -31,16 +31,16 @@
                         </div>
                         <div class="card-price">
                             <p>20000 XAF</p>
-                            <i class="fas fa-cart"></i>
+                            <i class="fas fa-shopping-cart"></i>
                         </div>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="card-product">
-                        <img src="../images/Apple_AirPods_Max_Casque_Circum-auriculaire_sans.jpg" alt="Casque">
+                        <img src="../images/Indulge_in_Lattafa_Yara_Candy_EDP___the.jpg" alt="Casque">
                         <div class="card-tilte">
-                            <p>AirPods Max <span class="bold">Gris</span></p>
+                            <p>YARA Lattafa <span class="bold">Rose fuchsia</span></p>
                             <p>
                                 <i class="material-icons">star</i>
                                 <i class="material-icons">star</i>
@@ -51,7 +51,7 @@
                         </div>
                         <div class="card-price">
                             <p>20.000 XAF</p>
-                            <i class="fas fa-cart"></i>
+                            <i class="fas fa-shopping-cart"></i>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="card-price">
                             <p>200.000 XAF</p>
-                            <i class="fas fa-cart"></i>
+                            <i class="fas a-shopping-cart"></i>
                         </div>
                     </div>
                 </div>
@@ -111,7 +111,7 @@
                         </div>
                         <div class="card-price">
                             <p>15.000 XAF</p>
-                            <i class="fas fa-cart"></i>
+                            <i class="fas fa-shopping-cart"></i>
                         </div>
                     </div>
                 </div>
@@ -131,18 +131,18 @@
                         </div>
                         <div class="card-price">
                             <p>30.000 XAF</p>
-                            <i class="fas fa-cart"></i>
+                            <i class="fas fa-shopping-cart"></i>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="nav-left">
-                <i class="fas fa-right"></i>
+            <div class="nav-right">
+                <i class="fas fa-chevron-right"></i>
             </div>
         </div>
     </section>
 
-    <script src="./caroussel.ts"></script>
+    <script src="../dist/caroussel.js" type="module"></script>
 </body>
 </html>
