Ajout du responsive desing en CSS et scroll automatique en Ts

--- a/src/index.html
+++ b/src/index.html
@@ -70,8 +70,8 @@
                             </p>
                         </div>
                         <div class="card-price">
-                            <p>250.000 XAF</p>
-                            <i class="fas fa-cart"></i>
+                            <p>230.000 XAF</p>
+                            <i class="fas fa-shopping-cart"></i>
                         </div>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                         </div>
                         <div class="card-price">
                             <p>200.000 XAF</p>
-                            <i class="fas a-shopping-cart"></i>
+                            <i class="fas fa-shopping-cart"></i>
                         </div>
                     </div>
                 </div>
